crates/quarto-markdown-pandoc/snapshots/error-corpus/json/001.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: json_string
---
[
  {
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 18,
        "file_id": 0,
        "start_offset": 17
      }
    },
    "problem": {
      "content": "unexpected character or token here",
      "type": "markdown"
    },
    "title": "Parse error"
  }
]
