crates/quarto-markdown-pandoc/snapshots/error-corpus/json/002.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: json_string
---
[
  {
    "code": "Q-2-2",
    "details": [
      {
        "content": {
          "content": "The attribute specifier starts here.",
          "type": "markdown"
        },
        "kind": "info",
        "location": {
          "Original": {
            "end_offset": 18,
            "file_id": 0,
            "start_offset": 17
          }
        }
      }
    ],
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 19,
        "file_id": 0,
        "start_offset": 18
      }
    },
    "problem": {
      "content": "I expected a '}', language specifier, an identifier, a class specifier, or a key-value pair.",
      "type": "markdown"
    },
    "title": "Mismatched Delimiter in Attribute Specifier"
  },
  {
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 20,
        "file_id": 0,
        "start_offset": 19
      }
    },
    "problem": {
      "content": "unexpected character or token here",
      "type": "markdown"
    },
    "title": "Parse error"
  }
]
