crates/quarto-markdown-pandoc/snapshots/error-corpus/json/005.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: json_string
---
[
  {
    "code": "Q-2-5",
    "details": [
      {
        "content": {
          "content": "This is the opening delimiter for the emphasis",
          "type": "markdown"
        },
        "kind": "info",
        "location": {
          "Original": {
            "end_offset": 12,
            "file_id": 0,
            "start_offset": 11
          }
        }
      }
    ],
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 18,
        "file_id": 0,
        "start_offset": 17
      }
    },
    "problem": {
      "content": "I reached the end of the block before finding a closing '_' for the emphasis.",
      "type": "markdown"
    },
    "title": "Unclosed Emphasis"
  }
]
