crates/quarto-markdown-pandoc/snapshots/error-corpus/json/006.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: json_string
---
[
  {
    "code": "Q-2-7",
    "details": [
      {
        "content": {
          "content": "This is the opening delimiter for the quote. If you meant to use an apostrophe, escape it with a backslash.",
          "type": "markdown"
        },
        "kind": "info",
        "location": {
          "Original": {
            "end_offset": 1,
            "file_id": 0,
            "start_offset": 0
          }
        }
      }
    ],
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 45,
        "file_id": 0,
        "start_offset": 44
      }
    },
    "problem": {
      "content": "I reached the end of the block before finding a closing \"'\" for the quote.",
      "type": "markdown"
    },
    "title": "Unclosed Single Quote"
  }
]
