crates/quarto-markdown-pandoc/snapshots/error-corpus/json/028.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: json_string
---
[
  {
    "code": "Q-2-12",
    "details": [
      {
        "content": {
          "content": "This is the opening '*' mark",
          "type": "markdown"
        },
        "kind": "info",
        "location": {
          "Original": {
            "end_offset": 1,
            "file_id": 0,
            "start_offset": 0
          }
        }
      }
    ],
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 19,
        "file_id": 0,
        "start_offset": 18
      }
    },
    "problem": {
      "content": "I reached the end of the block before finding a closing '*' for the emphasis.",
      "type": "markdown"
    },
    "title": "Unclosed Star Emphasis"
  }
]
