crates/quarto-markdown-pandoc/snapshots/error-corpus/json/029.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: json_string
---
[
  {
    "code": "Q-2-13",
    "details": [
      {
        "content": {
          "content": "This is the opening '**' mark",
          "type": "markdown"
        },
        "kind": "info",
        "location": {
          "Original": {
            "end_offset": 2,
            "file_id": 0,
            "start_offset": 0
          }
        }
      }
    ],
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 27,
        "file_id": 0,
        "start_offset": 26
      }
    },
    "problem": {
      "content": "I reached the end of the block before finding a closing '**' for the strong emphasis.",
      "type": "markdown"
    },
    "title": "Unclosed Strong Star Emphasis"
  }
]
